# desenvolvimento_bilbiotecas

./: README.md
workshop_poetry/: pyproject.toml
workshop_poetry/tests/: main.py
